--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,16 @@
 html {
   font-family: "Open Sans", sans-serif;
+  background-color: #f2f2f2;
 }
 
 h1 {
   border-bottom: 1px solid #000;
+}
+
+/*legend {
+  padding: 0 1.05rem 0 0;
+}*/
+
+.bg-white {
+  background-color: #fff;
 }
